--- a/hello-world.html
+++ b/hello-world.html
@@ -9,8 +9,10 @@
   <li> English: Hello, world! </li>
   <li> Spanish:  Hola, mundo! </li>
   <li> Japanese: Konnichiwa, sekai! </li>
+  <li> Turkish: Merhaba, Dunya! </li>
   <li> French: Bonjour, monde! </li>
   <li> Kinyarwanda: Mwirwe, isi! </li>
   <li> German: Guten tag, Welt! </li>
   <li> Pig Latin: ello-hay, orld-way! </li>
+  <li> Italian: Ciao, mondo! </li>
 </ul>
